lib/src/generated/ohminParser.dart
// Generated from tool/ohmin.g4 by ANTLR 4.13.2
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'ohminListener.dart';
import 'ohminBaseListener.dart';
const int RULE_c247string = 0, RULE_cdayoftheweek = 1, RULE_cworkdays = 2, 
          RULE_cworkdays2letters = 3, RULE_cworkdays3letters = 4, RULE_cweekend = 5, 
          RULE_cweekend2letters = 6, RULE_cweekend3letters = 7, RULE_cmonth = 8, 
          RULE_csunlightevent = 9, RULE_coffsetsymbols = 10, RULE_cminute = 11, 
          RULE_chour = 12, RULE_cday = 13, RULE_cweeknum = 14, RULE_positive_integer = 15, 
          RULE_negative_integer = 16, RULE_hh_mm = 17, RULE_comment = 18, 
          RULE_nth_entry = 19, RULE_opening_hours = 20, RULE_rule_sequence = 21, 
          RULE_rule_separator = 22, RULE_rule_modifier = 23, RULE_rule_modifier_open = 24, 
          RULE_rule_modifier_closed = 25, RULE_rule_modifier_unknown = 26, 
          RULE_rule_modifier_comment = 27, RULE_selector_sequence = 28, 
          RULE_small_range_selectors = 29, RULE_weekday_selector = 30, RULE_weekday_sequence = 31, 
          RULE_weekday_ranges = 32, RULE_weekday_ranges_single = 33, RULE_weekday_ranges_range = 34, 
          RULE_weekday_ranges_range_nth = 35, RULE_weekday_ranges_range_nth_offset = 36, 
          RULE_holiday_sequence = 37, RULE_holiday = 38, RULE_day_offset = 39, 
          RULE_time_selector = 40, RULE_timespan = 41, RULE_timespan_range = 42, 
          RULE_timespan_range_openended = 43, RULE_timespan_range_cron = 44, 
          RULE_timespan_openended = 45, RULE_time = 46, RULE_variable_time = 47, 
          RULE_wide_range_selectors = 48, RULE_year_sel = 49, RULE_year_selector = 50, 
          RULE_year_selector_range = 51, RULE_year_selector_range_cron = 52, 
          RULE_year_selector_single = 53, RULE_year_selector_single_cron = 54, 
          RULE_year_selector_single_openended = 55, RULE_calendarmonth_selector = 56, 
          RULE_calendarmonth_range = 57, RULE_calendarmonth_range_single = 58, 
          RULE_calendarmonth_range_range = 59, RULE_calendarmonth_range_cron = 60, 
          RULE_calendarmonth_range_from = 61, RULE_calendarmonth_range_from_openended = 62, 
          RULE_calendarmonth_range_from_to = 63, RULE_date_offset = 64, 
          RULE_date_from = 65, RULE_date_to = 66, RULE_moveable_holidays = 67, 
          RULE_week_selector = 68, RULE_week = 69, RULE_week_single = 70, 
          RULE_week_range = 71, RULE_week_range_cron = 72;
class ohminParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.2', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_T__0 = 1, TOKEN_T__1 = 2, TOKEN_T__2 = 3, TOKEN_T__3 = 4, 
                   TOKEN_T__4 = 5, TOKEN_T__5 = 6, TOKEN_T__6 = 7, TOKEN_T__7 = 8, 
                   TOKEN_T__8 = 9, TOKEN_T__9 = 10, TOKEN_T__10 = 11, TOKEN_T__11 = 12, 
                   TOKEN_T__12 = 13, TOKEN_T__13 = 14, TOKEN_T__14 = 15, 
                   TOKEN_T__15 = 16, TOKEN_T__16 = 17, TOKEN_T__17 = 18, 
                   TOKEN_T__18 = 19, TOKEN_T__19 = 20, TOKEN_T__20 = 21, 
                   TOKEN_T__21 = 22, TOKEN_T__22 = 23, TOKEN_T__23 = 24, 
                   TOKEN_T__24 = 25, TOKEN_T__25 = 26, TOKEN_T__26 = 27, 
                   TOKEN_T__27 = 28, TOKEN_T__28 = 29, TOKEN_T__29 = 30, 
                   TOKEN_T__30 = 31, TOKEN_T__31 = 32, TOKEN_T__32 = 33, 
                   TOKEN_T__33 = 34, TOKEN_T__34 = 35, TOKEN_T__35 = 36, 
                   TOKEN_T__36 = 37, TOKEN_T__37 = 38, TOKEN_T__38 = 39, 
                   TOKEN_T__39 = 40, TOKEN_T__40 = 41, TOKEN_T__41 = 42, 
                   TOKEN_T__42 = 43, TOKEN_T__43 = 44, TOKEN_T__44 = 45, 
                   TOKEN_T__45 = 46, TOKEN_T__46 = 47, TOKEN_T__47 = 48, 
                   TOKEN_T__48 = 49, TOKEN_T__49 = 50, TOKEN_T__50 = 51, 
                   TOKEN_T__51 = 52, TOKEN_NUMBERS = 53, TOKEN_COMMENT = 54, 
                   TOKEN_WS = 55;

  @override
  final List<String> ruleNames = [
    'c247string', 'cdayoftheweek', 'cworkdays', 'cworkdays2letters', 'cworkdays3letters', 
    'cweekend', 'cweekend2letters', 'cweekend3letters', 'cmonth', 'csunlightevent', 
    'coffsetsymbols', 'cminute', 'chour', 'cday', 'cweeknum', 'positive_integer', 
    'negative_integer', 'hh_mm', 'comment', 'nth_entry', 'opening_hours', 
    'rule_sequence', 'rule_separator', 'rule_modifier', 'rule_modifier_open', 
    'rule_modifier_closed', 'rule_modifier_unknown', 'rule_modifier_comment', 
    'selector_sequence', 'small_range_selectors', 'weekday_selector', 'weekday_sequence', 
    'weekday_ranges', 'weekday_ranges_single', 'weekday_ranges_range', 'weekday_ranges_range_nth', 
    'weekday_ranges_range_nth_offset', 'holiday_sequence', 'holiday', 'day_offset', 
    'time_selector', 'timespan', 'timespan_range', 'timespan_range_openended', 
    'timespan_range_cron', 'timespan_openended', 'time', 'variable_time', 
    'wide_range_selectors', 'year_sel', 'year_selector', 'year_selector_range', 
    'year_selector_range_cron', 'year_selector_single', 'year_selector_single_cron', 
    'year_selector_single_openended', 'calendarmonth_selector', 'calendarmonth_range', 
    'calendarmonth_range_single', 'calendarmonth_range_range', 'calendarmonth_range_cron', 
    'calendarmonth_range_from', 'calendarmonth_range_from_openended', 'calendarmonth_range_from_to', 
    'date_offset', 'date_from', 'date_to', 'moveable_holidays', 'week_selector', 
    'week', 'week_single', 'week_range', 'week_range_cron'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'24/7'", "'Mo'", "'Tu'", "'We'", "'Th'", "'Fr'", "'Mon'", "'Tue'", 
      "'Wed'", "'Thu'", "'Fri'", "'Sa'", "'Su'", "'Sat'", "'Sun'", "'Jan'", 
      "'Feb'", "'Mar'", "'Apr'", "'May'", "'Jun'", "'Jul'", "'Aug'", "'Sep'", 
      "'Oct'", "'Nov'", "'Dec'", "'dawn'", "'sunrise'", "'sunset'", "'dusk'", 
      "'+'", "'-'", "':'", "';'", "'||'", "'open'", "'closed'", "'off'", 
      "'unknown'", "','", "'['", "']'", "'PH'", "'SH'", "'day'", "'s'", 
      "'/'", "'('", "')'", "'easter'", "'week'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, null, null, 
      null, null, null, null, null, null, null, null, null, "NUMBERS", "COMMENT", 
      "WS"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'ohmin.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  ohminParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  C247stringContext c247string() {
    dynamic _localctx = C247stringContext(context, state);
    enterRule(_localctx, 0, RULE_c247string);
    try {
      enterOuterAlt(_localctx, 1);
      state = 146;
      match(TOKEN_T__0);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CdayoftheweekContext cdayoftheweek() {
    dynamic _localctx = CdayoftheweekContext(context, state);
    enterRule(_localctx, 2, RULE_cdayoftheweek);
    try {
      state = 150;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_T__1:
      case TOKEN_T__2:
      case TOKEN_T__3:
      case TOKEN_T__4:
      case TOKEN_T__5:
      case TOKEN_T__6:
      case TOKEN_T__7:
      case TOKEN_T__8:
      case TOKEN_T__9:
      case TOKEN_T__10:
        enterOuterAlt(_localctx, 1);
        state = 148;
        cworkdays();
        break;
      case TOKEN_T__11:
      case TOKEN_T__12:
      case TOKEN_T__13:
      case TOKEN_T__14:
        enterOuterAlt(_localctx, 2);
        state = 149;
        cweekend();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CworkdaysContext cworkdays() {
    dynamic _localctx = CworkdaysContext(context, state);
    enterRule(_localctx, 4, RULE_cworkdays);
    try {
      state = 154;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_T__1:
      case TOKEN_T__2:
      case TOKEN_T__3:
      case TOKEN_T__4:
      case TOKEN_T__5:
        enterOuterAlt(_localctx, 1);
        state = 152;
        cworkdays2letters();
        break;
      case TOKEN_T__6:
      case TOKEN_T__7:
      case TOKEN_T__8:
      case TOKEN_T__9:
      case TOKEN_T__10:
        enterOuterAlt(_localctx, 2);
        state = 153;
        cworkdays3letters();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Cworkdays2lettersContext cworkdays2letters() {
    dynamic _localctx = Cworkdays2lettersContext(context, state);
    enterRule(_localctx, 6, RULE_cworkdays2letters);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 156;
      _la = tokenStream.LA(1)!;
      if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 124) != 0))) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Cworkdays3lettersContext cworkdays3letters() {
    dynamic _localctx = Cworkdays3lettersContext(context, state);
    enterRule(_localctx, 8, RULE_cworkdays3letters);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 158;
      _la = tokenStream.LA(1)!;
      if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 3968) != 0))) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CweekendContext cweekend() {
    dynamic _localctx = CweekendContext(context, state);
    enterRule(_localctx, 10, RULE_cweekend);
    try {
      state = 162;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_T__11:
      case TOKEN_T__12:
        enterOuterAlt(_localctx, 1);
        state = 160;
        cweekend2letters();
        break;
      case TOKEN_T__13:
      case TOKEN_T__14:
        enterOuterAlt(_localctx, 2);
        state = 161;
        cweekend3letters();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Cweekend2lettersContext cweekend2letters() {
    dynamic _localctx = Cweekend2lettersContext(context, state);
    enterRule(_localctx, 12, RULE_cweekend2letters);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 164;
      _la = tokenStream.LA(1)!;
      if (!(_la == TOKEN_T__11 || _la == TOKEN_T__12)) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Cweekend3lettersContext cweekend3letters() {
    dynamic _localctx = Cweekend3lettersContext(context, state);
    enterRule(_localctx, 14, RULE_cweekend3letters);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 166;
      _la = tokenStream.LA(1)!;
      if (!(_la == TOKEN_T__13 || _la == TOKEN_T__14)) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CmonthContext cmonth() {
    dynamic _localctx = CmonthContext(context, state);
    enterRule(_localctx, 16, RULE_cmonth);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 168;
      _la = tokenStream.LA(1)!;
      if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 268369920) != 0))) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CsunlighteventContext csunlightevent() {
    dynamic _localctx = CsunlighteventContext(context, state);
    enterRule(_localctx, 18, RULE_csunlightevent);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 170;
      _la = tokenStream.LA(1)!;
      if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 4026531840) != 0))) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CoffsetsymbolsContext coffsetsymbols() {
    dynamic _localctx = CoffsetsymbolsContext(context, state);
    enterRule(_localctx, 20, RULE_coffsetsymbols);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 172;
      _la = tokenStream.LA(1)!;
      if (!(_la == TOKEN_T__31 || _la == TOKEN_T__32)) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CminuteContext cminute() {
    dynamic _localctx = CminuteContext(context, state);
    enterRule(_localctx, 22, RULE_cminute);
    try {
      enterOuterAlt(_localctx, 1);
      state = 174;
      match(TOKEN_NUMBERS);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  ChourContext chour() {
    dynamic _localctx = ChourContext(context, state);
    enterRule(_localctx, 24, RULE_chour);
    try {
      enterOuterAlt(_localctx, 1);
      state = 176;
      match(TOKEN_NUMBERS);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CdayContext cday() {
    dynamic _localctx = CdayContext(context, state);
    enterRule(_localctx, 26, RULE_cday);
    try {
      enterOuterAlt(_localctx, 1);
      state = 178;
      match(TOKEN_NUMBERS);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CweeknumContext cweeknum() {
    dynamic _localctx = CweeknumContext(context, state);
    enterRule(_localctx, 28, RULE_cweeknum);
    try {
      enterOuterAlt(_localctx, 1);
      state = 180;
      match(TOKEN_NUMBERS);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Positive_integerContext positive_integer() {
    dynamic _localctx = Positive_integerContext(context, state);
    enterRule(_localctx, 30, RULE_positive_integer);
    try {
      enterOuterAlt(_localctx, 1);
      state = 182;
      match(TOKEN_NUMBERS);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Negative_integerContext negative_integer() {
    dynamic _localctx = Negative_integerContext(context, state);
    enterRule(_localctx, 32, RULE_negative_integer);
    try {
      enterOuterAlt(_localctx, 1);
      state = 184;
      match(TOKEN_T__32);
      state = 185;
      positive_integer();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Hh_mmContext hh_mm() {
    dynamic _localctx = Hh_mmContext(context, state);
    enterRule(_localctx, 34, RULE_hh_mm);
    try {
      enterOuterAlt(_localctx, 1);
      state = 187;
      chour();
      state = 188;
      match(TOKEN_T__33);
      state = 189;
      cminute();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  CommentContext comment() {
    dynamic _localctx = CommentContext(context, state);
    enterRule(_localctx, 36, RULE_comment);
    try {
      enterOuterAlt(_localctx, 1);
      state = 191;
      match(TOKEN_COMMENT);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Nth_entryContext nth_entry() {
    dynamic _localctx = Nth_entryContext(context, state);
    enterRule(_localctx, 38, RULE_nth_entry);
    try {
      state = 199;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 3, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 193;
        negative_integer();
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 194;
        positive_integer();
        state = 195;
        match(TOKEN_T__32);
        state = 196;
        positive_integer();
        break;
      case 3:
        enterOuterAlt(_localctx, 3);
        state = 198;
        positive_integer();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Opening_hoursContext opening_hours() {
    dynamic _localctx = Opening_hoursContext(context, state);
    enterRule(_localctx, 40, RULE_opening_hours);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 201;
      rule_sequence();
      state = 207;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while (_la == TOKEN_T__34 || _la == TOKEN_T__35) {
        state = 202;
        rule_separator();
        state = 203;
        rule_sequence();
        state = 209;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 210;
      match(TOKEN_EOF);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Rule_sequenceContext rule_sequence() {
    dynamic _localctx = Rule_sequenceContext(context, state);
    enterRule(_localctx, 42, RULE_rule_sequence);
    try {
      state = 216;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 5, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 212;
        selector_sequence();
        state = 213;
        rule_modifier();
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 215;
        selector_sequence();
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Rule_separatorContext rule_separator() {
    dynamic _localctx = Rule_separatorContext(context, state);
    enterRule(_localctx, 44, RULE_rule_separator);
    try {
      state = 220;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_T__34:
        _localctx = Rule_separator_normalContext(_localctx);
        enterOuterAlt(_localctx, 1);
        state = 218;
        match(TOKEN_T__34);
        break;
      case TOKEN_T__35:
        _localctx = Rule_separator_fallbackContext(_localctx);
        enterOuterAlt(_localctx, 2);
        state = 219;
        match(TOKEN_T__35);
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Rule_modifierContext rule_modifier() {
    dynamic _localctx = Rule_modifierContext(context, state);
    enterRule(_localctx, 46, RULE_rule_modifier);
    try {
      state = 226;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_T__36:
        enterOuterAlt(_localctx, 1);
        state = 222;
        rule_modifier_open();
        break;
      case TOKEN_T__37:
      case TOKEN_T__38:
        enterOuterAlt(_localctx, 2);
        state = 223;
        rule_modifier_closed();
        break;
      case TOKEN_T__39:
        enterOuterAlt(_localctx, 3);
        state = 224;
        rule_modifier_unknown();
        break;
      case TOKEN_COMMENT:
        enterOuterAlt(_localctx, 4);
        state = 225;
        rule_modifier_comment();
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Rule_modifier_openContext rule_modifier_open() {
    dynamic _localctx = Rule_modifier_openContext(context, state);
    enterRule(_localctx, 48, RULE_rule_modifier_open);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 228;
      match(TOKEN_T__36);
      state = 230;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_COMMENT) {
        state = 229;
        comment();
      }

    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Rule_modifier_closedContext rule_modifier_closed() {
    dynamic _localctx = Rule_modifier_closedContext(context, state);
    enterRule(_localctx, 50, RULE_rule_modifier_closed);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 232;
      _la = tokenStream.LA(1)!;
      if (!(_la == TOKEN_T__37 || _la == TOKEN_T__38)) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
      state = 234;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_COMMENT) {
        state = 233;
        comment();
      }

    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Rule_modifier_unknownContext rule_modifier_unknown() {
    dynamic _localctx = Rule_modifier_unknownContext(context, state);
    enterRule(_localctx, 52, RULE_rule_modifier_unknown);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 236;
      match(TOKEN_T__39);
      state = 238;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      if (_la == TOKEN_COMMENT) {
        state = 237;
        comment();
      }

    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Rule_modifier_commentContext rule_modifier_comment() {
    dynamic _localctx = Rule_modifier_commentContext(context, state);
    enterRule(_localctx, 54, RULE_rule_modifier_comment);
    try {
      enterOuterAlt(_localctx, 1);
      state = 240;
      comment();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }
